[package]
name = "pomo-tui"
version = "0.1.0"
description = "the available pomodoro timers weren't cutting it, so time to make my own."
authors = ["shifkey <sevensidedsilver@gmail.com>"]
license = "MIT"
edition = "2024"

[dependencies]
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = "0.3.31"
ratatui = "0.29.0"
tokio = { version = "1.40.0", features = ["full"] }
color-eyre = "0.6.3"
